--- a/aboutUs.html
+++ b/aboutUs.html
@@ -138,7 +138,6 @@
 
         </div>
 
-
         <div class="benefits">
             <p>Our Benefits</p>
 
@@ -372,8 +371,8 @@
             //UNCOMMENT OUT THE LINE BELOW TO KEEP ARROWS PART OF MOUSEENTER PAUSE/RESUME
             // slideshowContainer2 = document.getElementsByClassName('slideshow-container')[0];
 
-            slideshowContainer2.addEventListener('mouseenter', pause)
-            slideshowContainer2.addEventListener('mouseleave', resume)
+            // slideshowContainer2.addEventListener('mouseenter', pause)
+            // slideshowContainer2.addEventListener('mouseleave', resume)
             })
 
             // NEXT AND PREVIOUS CONTROL
